[workspace]
resolver = "2"
members = ["cdevents-sdk", "generator"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = [
    # The actual list of contributors can be retrieved from the git log
    "The CDEvents Rust SDK Authors",
]
license = "Apache-2.0"
repository = "https://github.com/cdevents/sdk-rust"
rust-version = "1.75"
publish = false

[workspace.metadata.release]
pre-release-commit-message = "🚀 (cargo-release) version {{version}}"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "🔖 {{version}}"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
