[workspace]
resolver = "2"
members = ["cdevents-sdk", "generator"]

[workspace.package]
edition = "2021"
version = "0.1.3"
authors = [
  # The actual list of contributors can be retrieved from the git log
  "The CDEvents Rust SDK Authors",
]
license = "Apache-2.0"
repository = "https://github.com/cdevents/sdk-rust"
rust-version = "1.80"
publish = false
