[workspace]
resolver = "2"
members = ["cdevents-sdk", "generator"]

[workspace.package]
edition = "2024"
version = "0.2.0"
authors = [
  # The actual list of contributors can be retrieved from the git log
  "The CDEvents Rust SDK Authors",
]
license = "Apache-2.0"
repository = "https://github.com/cdevents/sdk-rust"
rust-version = "1.85"
publish = false
