[package]
name = "cdevents-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "A Rust SDK for CDEvents"

[dependencies]
cloudevents-sdk = { version = "0.9", optional = true, default-features = false }
fluent-uri = "0.4"
proptest = { version = "1.4", optional = true }
proptest-derive = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["serde-human-readable"] }

[dev-dependencies]
assert-json-diff = "2.0"
boon = "0.6"
glob = "0.3"
proptest = "1"
regex = "1.10"
rstest = "0.26"

[features]
default = ["cloudevents"]
# provide cloudevents helpers and extensions
cloudevents = ["dep:cloudevents-sdk"]
# provide test helpers (proptest'strategies and arbitraries for struct generation)
testkit = ["dep:proptest", "dep:proptest-derive"]
