# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "generate cdevents type from json schema on cdevents-spec"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
cruet = "0.14"
handlebars = { version = "5", features = ["dir_source"] }
handlebars_misc_helpers = { version = "0.15", default-features = false, features = [
  "string",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
